fixed footer on mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -335,6 +335,7 @@ body {
 .page-footer p {
   padding: 0 20px 0 30px;
   font-size: 25px;
+  text-align: center;
 }
 
 @media (max-width: 1500px) {
